SERVER-70142 planSummary populated when find command is run in CQF