src/mongo/db/query/optimizer/explain.cpp
@@ -47,6 +47,7 @@
 #include <memory>
 #include <ostream>
 #include <set>
+#include <sstream>
 #include <tuple>
 #include <type_traits>
 #include <vector>
@@ -62,6 +63,7 @@
 #include "mongo/db/query/optimizer/comparison_op.h"
 #include "mongo/db/query/optimizer/containers.h"
 #include "mongo/db/query/optimizer/defs.h"
+#include "mongo/db/query/optimizer/metadata.h"
 #include "mongo/db/query/optimizer/node.h"  // IWYU pragma: keep
 #include "mongo/db/query/optimizer/syntax/expr.h"
 #include "mongo/db/query/optimizer/syntax/path.h"
@@ -72,8 +74,12 @@
 
 namespace mongo::optimizer {
 
-ABTPrinter::ABTPrinter(PlanAndProps planAndProps, const ExplainVersion explainVersion)
-    : _planAndProps(std::move(planAndProps)), _explainVersion(explainVersion) {}
+ABTPrinter::ABTPrinter(Metadata metadata,
+                       PlanAndProps planAndProps,
+                       const ExplainVersion explainVersion)
+    : _metadata(std::move(metadata)),
+      _planAndProps(std::move(planAndProps)),
+      _explainVersion(explainVersion) {}
 
 BSONObj ABTPrinter::explainBSON() const {
     const auto explainPlanStr = [&](std::string planStr) {
@@ -3077,6 +3083,67 @@ std::pair<sbe::value::TypeTags, sbe::value::Value> ExplainGenerator::explainMemo
     const cascades::MemoExplainInterface& memoInterface) {
     ExplainGeneratorV3 gen(false /*displayProperties*/, &memoInterface);
     return gen.printMemo().moveValue();
+}
+
+class ShortPlanSummaryTransport {
+public:
+    ShortPlanSummaryTransport(const Metadata& metadata) : _metadata(metadata) {}
+
+    void transport(const PhysicalScanNode& node, const ABT&) {
+        ss << "COLLSCAN";
+    }
+
+    void transport(const IndexScanNode& node, const ABT&) {
+        std::string idxCombined = getIndexDetails(node);
+        if (ss.str().find(idxCombined) == std::string::npos) {
+            if (ss.tellp() != 0) {
+                ss << ", ";
+            }
+            ss << idxCombined;
+        }
+    }
+
+    std::string getIndexDetails(const IndexScanNode& node) {
+        auto& scanName = node.getScanDefName();
+        auto& idxName = node.getIndexDefName();
+        auto& idxDef = _metadata._scanDefs.at(scanName).getIndexDefs();
+        auto& idxVal = idxDef.at(idxName);
+        std::stringstream idxDetails;
+        idxDetails << "IXSCAN { ";
+        bool firstCollationEntry = true;
+        for (const auto& [projName, op] : idxVal.getCollationSpec()) {
+            if (!firstCollationEntry) {
+                idxDetails << ", ";
+            }
+            idxDetails << PathStringify::stringify(projName);
+            if (op == CollationOp::Ascending) {
+                idxDetails << ": 1";
+            } else if (op == CollationOp::Descending) {
+                idxDetails << ": -1";
+            }
+            firstCollationEntry = false;
+        }
+        idxDetails << " }";
+        return idxDetails.str();
+    }
+
+    template <typename T, typename... Ts>
+    void transport(const T& node, Ts&&...) {
+        static_assert(
+            (!std::is_base_of_v<PhysicalScanNode, T>)&&(!std::is_base_of_v<IndexScanNode, T>));
+    }
+
+    std::string getPlanSummary(const ABT& n) {
+        algebra::transport<false>(n, *this);
+        return ss.str();
+    }
+
+    std::stringstream ss;
+    const Metadata& _metadata;
+};
+
+std::string ABTPrinter::getPlanSummary() const {
+    return ShortPlanSummaryTransport(_metadata).getPlanSummary(_planAndProps._node);
 }
 
 BSONObj ExplainGenerator::explainMemoBSONObj(const cascades::MemoExplainInterface& memoInterface) {
